[project]
name = "cain-2025-domain-knowledge"
version = "0.1.0"
description = "Replication package for the short paper 'Addressing Quality Challenges in Deep Learning: The Role of MLOps and Domain Knowledge'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-posthocs>=0.10.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]
